WIP: abstract syntax tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(SRC 
     src/lexer.cpp
     src/parser.cpp
+    src/ast.cpp
     src/main.cpp)
 
 add_executable(tinylang ${SRC})
